<resources>
    <string name="app_name">PopularMovies</string>
    <string name="moviedb_api">fb3ae32b98663668e866118ececfba72</string>

    <string name="moviedb_popular">Popular</string>
    <string name="moviedb_top_rated">Top Rated</string>
    <string name="moviedb_favorites">Favorites</string>

    <string name="movie_poster_description">Awesome!</string>
    <string name="movie_title_label">Title</string>
    <string name="movie_release_date_label">Release Date</string>
    <string name="movie_plot_synopsis_label">Plot Synopsis</string>
    <string name="movie_vote_average_label">Vote Average</string>
    <string name="movie_favorites_button_label">Add to Favorites</string>
    <string name="movie_reviews">Reviews</string>

</resources>
