<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="popularmovies.udacity.com.popularmovies.MovieDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_description"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/movie_favorite_button"
            android:text="@string/movie_favorites_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_release_date_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_vote_average_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_vote_average_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_plot_synopsis_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_plot_synopsis_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Trailers"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/movie_videos_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Reviews"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/movie_reviews_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>